tests/ui/parser/issues/issue-87197-missing-semicolon.stderr
error: expected `;`, found `println`
  --> $DIR/issue-87197-missing-semicolon.rs:6:16
   |
LL |     let x = 100
   |                ^
LL |     println!("{}", x)
   |     ------- unexpected token
   |
help: add `;` here
   |
LL |     let x = 100;
   |                +

error: expected `;`, found keyword `let`
  --> $DIR/issue-87197-missing-semicolon.rs:7:22
   |
LL |     println!("{}", x)
   |                      ^
LL |     let y = 200
   |     --- unexpected token
   |
help: add `;` here
   |
LL |     println!("{}", x);
   |                      +

error: expected `;`, found `println`
  --> $DIR/issue-87197-missing-semicolon.rs:8:16
   |
LL |     let y = 200
   |                ^
LL |     println!("{}", y);
   |     ------- unexpected token
   |
help: add `;` here
   |
LL |     let y = 200;
   |                +

error: aborting due to 3 previous errors

